--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- gallery and slider for the certificates -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/5.4.2/photoswipe.min.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <!-- <link rel="stylesheet" href=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css "> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/themes/splide-sea-green.min.css">
 
     <!-- webpage styling -->
     <link rel="stylesheet" href="css/base.css">
@@ -128,10 +128,6 @@
                             <li>Бажання краще пізнати і зрозуміти себе, пошук ідентичності</li>
                             <li>Налагодження стосунків з собою та оточенням</li>
                         </ul>
-                        <br>
-                        <p>
-                            У випадку, якщо ви відчуваєте дискомфорт від нинішнього життєвого становища, чи у вас виникають небажані відчуття та емоції звернення до психолога може зменшити руйнівний вплив негативних емоцій та покращити якість життя.
-                        </p>                            
                     </div>
             </div>
             <div class="column" data-aos="fade-up">
@@ -174,66 +170,65 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="certificate-wrapper">
-                    <h3>Сертифікати<h3>
-                <div id="certificate-gallery" class="certificate-carousel pswp-gallery" data-aos="fade-up">
-                    <div>
+        <div id="certificate-gallery" class="row splide" role="group" aria-label="Certificates">
+            <div class="splide__track">
+                <ul class="splide__list">
+                    <li class="splide__slide">
                         <a href="images/certificates/cert1.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert1.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert2.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert2.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert3.jpg" data-pswp-width="750" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert3.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert4.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert4.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert5.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert5.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert6.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert6.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert7.jpg" data-pswp-width="707" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert7.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert8.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert8.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert9.jpg" data-pswp-width="1777" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert9.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert10.jpg" data-pswp-width="1414" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert10.jpg" alt=""/>
                         </a>
-                    </div>
-                    <div>
+                    </li>
+                    <li class="splide__slide">
                         <a href="images/certificates/cert11.jpg" data-pswp-width="707" data-pswp-height="1000" target="_blank">
                             <img src="images/certificates/cert11.jpg" alt=""/>
                         </a>
-                    </div>
-                </div>
+                    </li>
+                </ul>
             </div>
         </div>
 
@@ -313,7 +308,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.5.0/parallax.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js "></script>
     <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/5.4.2/photoswipe-lightbox.esm.min.js"></script>
 
     <script src="main.js"></script>
@@ -323,16 +318,26 @@
     </script>
 
     <script>
-    $(document).ready(function(){
-      $('.certificate-carousel').slick({
-        slidesToShow: 3,
-        slidesToScroll: 2,
-        dots:true,
-        arrows: true,
-        centerMode: true,
-        speed: 300
-      });
-    });
+        document.addEventListener( 'DOMContentLoaded', function() {
+            var splide = new Splide( '.splide', {
+                type: 'loop',
+                perPage: 3,
+                arrows: false,
+                mediaQuery: 'min',                        
+                breakpoints: {
+                    640:{
+                        type: 'slide',
+                        perPage: 5,
+                        focus: 'center',
+                        arrows: true,
+                        omitEnd: true,
+                        trimSpace: false,
+                        start: 2
+                    },
+                }
+            });
+            splide.mount();
+        } );
     </script>
 
     <script type="module">
