Update logo. Update text. Fix page title. Add qna paragraph

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!--- basic page needs -->
     <meta charset="utf-8">
-    <title>Olha Psycologist</title>
+    <title>Olha Psychologist</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -130,9 +130,12 @@
                         <h3>Коли до мене звертаються</h3>  
                         <ul>
                             <li>Тривожність, страх, сором та інші непрості переживання</li>
-                            <li>Складні життєві обставини та ситуації невизначеності</li>
+                            <li>Труднощі в стосунках (партнерських, дружніх, сімейних)</li>
                             <li>Бажання краще пізнати і зрозуміти себе, пошук ідентичності</li>
-                            <li>Налагодження стосунків з собою та оточенням</li>
+                            <li>Невпевненість у собі</li>
+                            <li>Відчуття самотності</li>
+                            <li>Складнощі у прояві та регуляції емоцій</li>
+                            <li>Невизначеність та пошук нових життєвих сенсів</li>
                         </ul>
                     </div>
             </div>
@@ -160,18 +163,13 @@
             <div class="column" data-aos="fade-up">
                 <div class="position">
                     <h3>Умови спільної роботи</h3>
-                    <p>
-                        Консультації відбуваються онлайн в <a href="https://zoom.us/" > <i class="fa-solid fa-video" style="color: #2d8cff;"> ZOOM</i></a>.
-                    </p>
-                    <br>
-                    <p>
-                        Від вас не потрібно ніякої попередньої підготовки, окрім забезпечити собі тихе та комфортне місце, де ви зможете почуватися вільно.
-                        Наші зустрічі - ваш безпечний простір, де ви можете: плакати, сміятися, матюкатися, говорити, мовчати.
-                        Ви задаєте тему та напрямок розмови, і ми разом, як партнери, рухаємося до відповідей та рішень.
-                        Я не маю упереджень, будь-який ваш досвід і переживання є цінними.
-                        І я стараюся зрозуміти їх настільки, наскільки це можливо.
-                        Уся розмова є повністю конфіденційною і залишається лише між нами.
-                    </p>
+                    <ul>
+                        <li> Консультації відбуваються в <a href="https://zoom.us/" > <i class="fa-solid fa-video" style="color: #2d8cff;"> ZOOM</i></a>  </li>
+                        <li> Від вас не потрібно ніякої попередньої підготовки, окрім забезпечити собі тихе, комфортне місце та гарний інтернет-зв’язок. </li>
+                        <li> Наші зустрічі — ваш безпечний простір, де ви задаєте тему й напрямок розмови — і ми разом, як партнери, приходимо до відповідей та рішень. </li>
+                        <li> Я не маю упереджень: будь-який ваш досвід і переживання є цінними, і я буду намагатися зрозуміти їх настільки, наскільки це можливо.  </li>
+                        <li> Уся розмова є повністю конфіденційною і залишається лише між нами. </li>                        
+                    </ul>
                 </div>
             </div>
         </div>
@@ -247,9 +245,13 @@
                         <b>Час консультації:</b> <br>
                         50 хв
                     </p>
-                    <br>
                 </div>
             </div>
+            <br>
+            <div class="row cta-content">
+                <p>Якщо у вас виникнуть питання — звʼяжіться зі мною, буду рада допомогти!</p>
+            </div>
+            <br>
         </div>
     </section>
 
