Update and buttons

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </h1>
                 <div style="display:flex; justify-content: center;">
                     <a href="https://t.me/krizaliti" class="hero-contact-button">
-                        Зв'язатися зі мною
+                        Записатися на консультацію
                     </a>
                 </div>
 
@@ -263,7 +263,7 @@
                     <ul style="list-style:none;">
                         <li>
                             <a href="https://t.me/krizaliti" class="contact-button" style="color: #2AABEE;">
-                                <i class="fa-brands fa-telegram" style="color: #2AABEE;"> krizaliti</i>
+                                <i class="fa-brands fa-telegram" style="color: #2AABEE;"> olgaolstp</i>
                             </a>
                         </li>
                         <br>
