--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 ваш персональний психолог
                 </h1>
                 <div style="display:flex; justify-content: center;">
-                    <a href="https://t.me/krizaliti" class="hero-contact-button">
+                    <a href="https://t.me/olgaolstp" class="hero-contact-button">
                         Записатися на консультацію
                     </a>
                 </div>
@@ -262,7 +262,7 @@
 
                     <ul style="list-style:none;">
                         <li>
-                            <a href="https://t.me/krizaliti" class="contact-button" style="color: #2AABEE;">
+                            <a href="https://t.me/olgaolstp" class="contact-button" style="color: #2AABEE;">
                                 <i class="fa-brands fa-telegram" style="color: #2AABEE;"> olgaolstp</i>
                             </a>
                         </li>
