--- a/index.html
+++ b/index.html
@@ -240,8 +240,10 @@
             <div class="row cta-content">
                 <div class="column large-full">
                     <p>
-                        <b>Вартість консультаціЇ:</b> <br>
-                        1000 грн <br>
+                        <b>Вартість консультаціЇ для клієнтів за кордоном:</b> <br>
+                        40 EUR<br>
+                        <b>Вартість консультаціЇ для клієнтів в Україні:</b> <br>
+                        1350 грн<br>
                         <b>Час консультації:</b> <br>
                         50 хв
                     </p>
